--- a/AnvilTool/Properties/Resources.resx
+++ b/AnvilTool/Properties/Resources.resx
@@ -148,6 +148,9 @@
   <data name="shrink" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\shrink.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="topBar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\top-bar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="upset" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\upset.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
