--- a/AnvilTool/Properties/Resources.resx
+++ b/AnvilTool/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="actionButtonRed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\action-button-red-full.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="bend" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bend.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -139,6 +142,9 @@
   <data name="mediumHit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\medium-hit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="performedStepOutline" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\performed-step-outline.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="planButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\plan-button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -147,6 +153,9 @@
   </data>
   <data name="shrink" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\shrink.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="slider" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\slider.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="topBar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\top-bar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
