--- a/AnvilTool/Properties/Resources.resx
+++ b/AnvilTool/Properties/Resources.resx
@@ -157,6 +157,12 @@
   <data name="slider" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\slider.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="sliderGreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sliderGreen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sliderRed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sliderRed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="topBar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\top-bar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
