--- a/AnvilTool/Properties/Resources.resx
+++ b/AnvilTool/Properties/Resources.resx
@@ -133,6 +133,12 @@
   <data name="draw" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\draw.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="fluxBg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\flux-bg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="hammerBg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hammer-bg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="hardHit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hard-hit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -144,6 +150,9 @@
   </data>
   <data name="performedStepOutline" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\performed-step-outline.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pieceBg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\piece-bg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="planButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\plan-button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
